--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -357,7 +357,7 @@
               alt="{{ section.settings.logo.alt | default: shop.name | escape }}"
             >
           {%- else -%}
-            <span class="h2">{{ shop.name }}</span>
+            <span class="h2">{{ shop.name | prepend: "Sigmund's " }}</span>
           {%- endif -%}
         </a>
     {%- if request.page_type == 'index' -%}
